--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
+    "simple-vue-camera": "^1.1.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
