--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "simple-vue-camera": "^1.1.3",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-camera-lib": "^1.0.4",
+    "vue-media-recorder": "^0.1.25",
+    "vue-web-cam": "^1.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
